<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/BackgroundColorAll">



        <TextView
            android:id="@+id/viewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/didact_gothic"
            android:text="Tema"
            android:textStyle="bold"
            android:textColor="?attr/textColorAll"
            android:textSize="25sp">
        </TextView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/viewText"
            android:background="?attr/buttonColorAll"></View>

        <TextView
            android:id="@+id/themeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/themeText"
            android:textColor="?attr/textColorAll"
            android:textSize="20sp">

        </TextView>


    <TextView
            android:id="@+id/securityTittleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/didact_gothic"
            android:text="Güvenlik"
            android:textStyle="bold"
            android:textColor="?attr/textColorAll"
            android:textSize="25sp">
        </TextView>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/securityTittleText"
            android:background="?attr/buttonColorAll"></View>


        <TextView
            android:id="@+id/securityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/pinText"
            android:textColor="?attr/textColorAll"
            android:textSize="20sp">

        </TextView>




            <TextView
                android:id="@+id/AppTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/uygulama_hakkinda"
                android:textStyle="bold"
                android:textColor="?attr/textColorAll"
                android:textSize="25sp">
            </TextView>


        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/securityTittleText"
            android:background="?attr/buttonColorAll"></View>


        <TextView
                android:id="@+id/aboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/connectMe"
                android:textColor="?attr/textColorAll"
                android:textSize="20sp">

            </TextView>


            <TextView
                android:id="@+id/shareText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/shareApp"
                android:textColor="?attr/textColorAll"
                android:textSize="20sp">

            </TextView>


            <TextView
                android:id="@+id/commitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/didact_gothic"
                android:text="@string/scoreApp"
                android:textColor="?attr/textColorAll"
                android:textSize="20sp">

            </TextView>

    </LinearLayout>

</layout>